# pydev_v3_coursework_1

./: .gitignore  README.md  pyproject.toml
app/: main.py  utils.py
main/: main.py  utils.py
tests/: test_create_mask.py  test_load_json_sorted.py  test_print_transactions.py
